fix(stepper): align icon to salt-size-base

--- a/packages/lab/src/stepper/Step.Icon.css
+++ b/packages/lab/src/stepper/Step.Icon.css
@@ -1,4 +1,10 @@
 .saltStepIcon {
   grid-area: icon;
   justify-self: center;
+  align-self: start;
+  box-sizing: content-box;
+}
+
+.saltStepper-vertical .saltStepIcon {
+  padding-top: calc((var(--salt-size-base) - var(--icon-size)) / 2);
 }
